Release 2.2: port OraHub master development to GitHub.
Bring Oracle Database Operator 2.2 changes (Traffic Manager/CMAN, SIDB True Cache and security model updates, Data Guard and ORDS improvements, and related docs/samples) as a single release commit on top of GitHub main. Keep the public operator image container-registry.oracle.com/database/operator:latest in install manifests and kustomize.

Sync rel2.2 with latest OraHub master

Bring current OraHub master development into the GitHub rel2.2 branch.
Keep public container-registry.oracle.com/database/operator:latest image
references for GitHub packaging. Includes SIDB/ORDS/Data Guard/True Cache
updates, documentation, samples, and controller fixes from upstream master.

Port Traffic Manager CMAN docs and samples from OraHub MR 934.

Bring in CMAN documentation, sample renames (cman-sidb-* convention),
file-mode samples, and samples index from the cman branch / MR !934.

Fix CMAN Mermaid diagram for GitLab 10.7 rendering.

Quote node and edge labels that contain dots, slashes, or spaces so OraHub's Mermaid 10.7 parser renders the flowchart instead of a syntax error.